feat: add two-step MFA and trusted browsers
